Fix panel title alignment

--- a/scss/_layouts_application-panels.scss
+++ b/scss/_layouts_application-panels.scss
@@ -105,8 +105,8 @@
     @extend %vf-heading-4;
 
     margin: 0;
-    padding-bottom: $sp-medium;
-    padding-top: $sp-medium;
+    margin-bottom: $spv--medium;
+    margin-top: $spv--small;
   }
 
   .p-panel__controls {
